# Livith-Data

./: .env.example  .gitignore  LYRICS_SETUP.md  PROMPT_MANAGEMENT.md  README.md  SCRIPTS_README.md  analyze_setlists_artists.py  analyze_songs_mismatch.py  check_artists_table.py  check_connection_info.py  cleanup_files.txt  compare_artist_files.py  complete_translation.py  concerts_backup.csv  config.py  csv_to_mysql_loader.py  final_check_all_files.py  fix_concerts_csv.py  fix_concerts_data.py  fix_encoding.py  google_ai_studio_prompt.txt  install.bat  install.sh  requirements.txt  run.py  show_schedule_mismatches.py  sort_concerts_by_matching.py  standardize_songs_artists_v2.py  test_direct_translation.py  test_encoding.py  test_gemini.py  test_gemini_detailed.py  test_musicbrainz_integration.py  test_mysql_connection.py  test_pipeline_gemini.py  update_lyrics.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
backup/: songs.csv.backup.csv
data/: livith_data_test.sql
data_processing/: data_enhancement.py  data_models.py  enhanced_csv_manager.py  enhanced_data_collector.py
database/: add_concert_schedules.py  analyze_table_constraints.py  check_db_schema.py  check_setlist_songs_duplicates.py  csv_to_mysql_loader.py  download_mysql_to_csv.py  final_improved_upsert_csv_to_mysql.py  final_setlist_songs_upload.py  fix_concert_setlists.py  fix_duplicates_and_download.py  fix_setlist_songs_order_index.py  fix_setlist_songs_upload.py  mysql_data_loader.py  (+12 more)
setup/: activate.bat  activate.sh  install.bat  install.sh  pyproject.toml  requirements.txt
(+342 files in other folders)
