[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "livith-data"
version = "1.0.0"
description = "한국 내한 콘서트 데이터 수집 및 관리 시스템"
requires-python = ">=3.8"

dependencies = [
    "requests>=2.32.0",
    "pandas>=2.3.0",
    "numpy>=2.3.0",
    "python-dotenv>=1.1.0",
    "lxml>=6.0.0",
    "google-generativeai>=0.8.0",
    "mysql-connector-python>=9.4.0",
    "sshtunnel>=0.4.0",
]